<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/drawer_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp">


        <FrameLayout
            android:id="@+id/nav_header_image_container"
            android:layout_width="64dp"
            android:layout_height="64dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/nav_header_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_vertical"
                android:src="@color/drawer_account_image_placeholder_color" />

            <TextView
                android:id="@+id/nav_header_contact_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="?attr/defaultToolbarTextColor"
                android:textSize="36sp"
                tools:text="A" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/first_account_container"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignTop="@+id/nav_header_image_container"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            tools:visibility="visible">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/first_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="?attr/defaultToolbarTextColor"
                android:textSize="24sp"
                tools:text="B" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/second_account_container"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="16dp"
            android:layout_toLeftOf="@id/first_account_container"
            android:visibility="gone"
            tools:visibility="visible">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:src="?attr/colorPrimaryDark" />

            <TextView
                android:id="@+id/second_account"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textColor="?attr/defaultToolbarTextColor"
                android:textSize="24sp"
                tools:text="C" />
        </FrameLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/nav_header_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            tools:text="Android Studio" />

        <TextView
            android:id="@+id/nav_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:paddingTop="16dp"
            tools:text="android.studio@android.com" />

        <security.planck.ui.nav_view.NavFolderAccountButton
            android:id="@+id/navFoldersAccountsButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:padding="4dp"
            android:src="@drawable/ic_arrow_drop_up_light" />
    </RelativeLayout>
</LinearLayout>
