<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/unified_inbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/unified_inbox_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/unifiedInboxIcon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/unified_inbox_new_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|end"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:minEms="1"
            tools:text="7" />

        <TextView
            android:id="@+id/unified_inbox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/unified_inbox_icon"
            android:layout_toStartOf="@id/unified_inbox_new_messages"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif-medium"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/integrated_inbox_title" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/all_messages_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/all_messages_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="?attr/allMessagesIcon"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/all_messages_new_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical|end"
            android:fontFamily="sans-serif-medium"
            android:layout_marginEnd="16dp"
            android:minEms="1"
            tools:text="7" />

        <TextView
            android:id="@+id/all_messages_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="sans-serif-medium"
            android:textColor="?android:attr/textColorPrimary"
            android:layout_toEndOf="@+id/all_messages_icon"
            android:layout_toStartOf="@id/all_messages_new_messages"
            android:gravity="center_vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/search_all_messages_title" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/folders_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/navigation_folders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/folder_navigation_list_item"/>
</LinearLayout>