<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/navigation_accounts"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout android:id="@+id/add_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/add_account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="?attr/iconAddAccount" />

        <TextView
            android:id="@+id/unified_inbox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/add_account_icon"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="36dp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/add_account_action" />

    </RelativeLayout>

    <RelativeLayout android:id="@+id/configure_account_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <ImageView
            android:id="@+id/configure_account_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:background="?attr/iconConfigureAccount" />

        <TextView
            android:id="@+id/configure_inbox_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/configure_account_icon"
            android:fontFamily="sans-serif-medium"
            android:paddingLeft="36dp"
            android:textColor="?android:attr/textColorPrimary"
            android:text="@string/action_settings" />

    </RelativeLayout>
</LinearLayout>