...
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <include layout="@layout/nav_header_main" />

                <include
                    android:id="@+id/navigation_bar_folders_layout"
                    layout="@layout/navigation_bar_folders" />

                <include
                    android:id="@+id/navigation_bar_accounts_layout"
                    layout="@layout/navigation_bar_accounts" />
            </LinearLayout>
...
